# pygame-intro

./: .gitignore  .pre-commit-config.yaml  Taskfile.yaml  pyproject.toml
src/: main.py  settings.py
